VyperParser.js
// Generated from Vyper.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var VyperListener = require('./VyperListener').VyperListener;
var VyperVisitor = require('./VyperVisitor').VyperVisitor;

var grammarFileName = "Vyper.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'unit'", "':'", "'{'", "','", "'}'", "'public('", 
                     "')'", "'bool'", "'int128'", "'uint256'", "'decimal'", 
                     "'address'", "'bytes32'", "'bytes['", "']'", "'timestamp'", 
                     "'timedelta'", "'wei_value'", "'['", "'('", "'event'", 
                     "'indexed('" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, "StringLiteral", "DoubleQuotedStringCharacter", 
                      "Identifier", "IntegerNumber", "DecimalNumber", "WS", 
                      "LINE_COMMENT", "OR" ];

var ruleNames =  [ "sourceUnit", "contractDefinition", "customUnitDeclarations", 
                   "customUnitDeclaration", "interfaceDefinition", "stateVariableDeclaration", 
                   "type", "valueType", "unitType", "customUnitType", "referenceType", 
                   "structType", "mappingType", "listType", "tupleType", 
                   "eventDefinition", "eventParameterList", "eventParameter", 
                   "storageVarDefinition", "functionDefinition" ];

function VyperParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

VyperParser.prototype = Object.create(antlr4.Parser.prototype);
VyperParser.prototype.constructor = VyperParser;

Object.defineProperty(VyperParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

VyperParser.EOF = antlr4.Token.EOF;
VyperParser.T__0 = 1;
VyperParser.T__1 = 2;
VyperParser.T__2 = 3;
VyperParser.T__3 = 4;
VyperParser.T__4 = 5;
VyperParser.T__5 = 6;
VyperParser.T__6 = 7;
VyperParser.T__7 = 8;
VyperParser.T__8 = 9;
VyperParser.T__9 = 10;
VyperParser.T__10 = 11;
VyperParser.T__11 = 12;
VyperParser.T__12 = 13;
VyperParser.T__13 = 14;
VyperParser.T__14 = 15;
VyperParser.T__15 = 16;
VyperParser.T__16 = 17;
VyperParser.T__17 = 18;
VyperParser.T__18 = 19;
VyperParser.T__19 = 20;
VyperParser.T__20 = 21;
VyperParser.T__21 = 22;
VyperParser.StringLiteral = 23;
VyperParser.DoubleQuotedStringCharacter = 24;
VyperParser.Identifier = 25;
VyperParser.IntegerNumber = 26;
VyperParser.DecimalNumber = 27;
VyperParser.WS = 28;
VyperParser.LINE_COMMENT = 29;
VyperParser.OR = 30;

VyperParser.RULE_sourceUnit = 0;
VyperParser.RULE_contractDefinition = 1;
VyperParser.RULE_customUnitDeclarations = 2;
VyperParser.RULE_customUnitDeclaration = 3;
VyperParser.RULE_interfaceDefinition = 4;
VyperParser.RULE_stateVariableDeclaration = 5;
VyperParser.RULE_type = 6;
VyperParser.RULE_valueType = 7;
VyperParser.RULE_unitType = 8;
VyperParser.RULE_customUnitType = 9;
VyperParser.RULE_referenceType = 10;
VyperParser.RULE_structType = 11;
VyperParser.RULE_mappingType = 12;
VyperParser.RULE_listType = 13;
VyperParser.RULE_tupleType = 14;
VyperParser.RULE_eventDefinition = 15;
VyperParser.RULE_eventParameterList = 16;
VyperParser.RULE_eventParameter = 17;
VyperParser.RULE_storageVarDefinition = 18;
VyperParser.RULE_functionDefinition = 19;


function SourceUnitContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_sourceUnit;
    return this;
}

SourceUnitContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SourceUnitContext.prototype.constructor = SourceUnitContext;

SourceUnitContext.prototype.EOF = function() {
    return this.getToken(VyperParser.EOF, 0);
};

SourceUnitContext.prototype.contractDefinition = function() {
    return this.getTypedRuleContext(ContractDefinitionContext,0);
};

SourceUnitContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterSourceUnit(this);
	}
};

SourceUnitContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitSourceUnit(this);
	}
};

SourceUnitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitSourceUnit(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.SourceUnitContext = SourceUnitContext;

VyperParser.prototype.sourceUnit = function() {

    var localctx = new SourceUnitContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, VyperParser.RULE_sourceUnit);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 40;
        this.contractDefinition();
        this.state = 41;
        this.match(VyperParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ContractDefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_contractDefinition;
    return this;
}

ContractDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ContractDefinitionContext.prototype.constructor = ContractDefinitionContext;

ContractDefinitionContext.prototype.customUnitDeclarations = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CustomUnitDeclarationsContext);
    } else {
        return this.getTypedRuleContext(CustomUnitDeclarationsContext,i);
    }
};

ContractDefinitionContext.prototype.interfaceDefinition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InterfaceDefinitionContext);
    } else {
        return this.getTypedRuleContext(InterfaceDefinitionContext,i);
    }
};

ContractDefinitionContext.prototype.stateVariableDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StateVariableDeclarationContext);
    } else {
        return this.getTypedRuleContext(StateVariableDeclarationContext,i);
    }
};

ContractDefinitionContext.prototype.eventDefinition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EventDefinitionContext);
    } else {
        return this.getTypedRuleContext(EventDefinitionContext,i);
    }
};

ContractDefinitionContext.prototype.storageVarDefinition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StorageVarDefinitionContext);
    } else {
        return this.getTypedRuleContext(StorageVarDefinitionContext,i);
    }
};

ContractDefinitionContext.prototype.functionDefinition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionDefinitionContext);
    } else {
        return this.getTypedRuleContext(FunctionDefinitionContext,i);
    }
};

ContractDefinitionContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterContractDefinition(this);
	}
};

ContractDefinitionContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitContractDefinition(this);
	}
};

ContractDefinitionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitContractDefinition(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.ContractDefinitionContext = ContractDefinitionContext;

VyperParser.prototype.contractDefinition = function() {

    var localctx = new ContractDefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, VyperParser.RULE_contractDefinition);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===VyperParser.T__0) {
            this.state = 43;
            this.customUnitDeclarations();
            this.state = 48;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 52;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 49;
                this.interfaceDefinition(); 
            }
            this.state = 54;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 58;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 55;
                this.stateVariableDeclaration(); 
            }
            this.state = 60;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

        this.state = 64;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 61;
                this.eventDefinition(); 
            }
            this.state = 66;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

        this.state = 70;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 67;
                this.storageVarDefinition(); 
            }
            this.state = 72;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

        this.state = 74; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 73;
            this.functionDefinition();
            this.state = 76; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===VyperParser.Identifier);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CustomUnitDeclarationsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_customUnitDeclarations;
    return this;
}

CustomUnitDeclarationsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CustomUnitDeclarationsContext.prototype.constructor = CustomUnitDeclarationsContext;

CustomUnitDeclarationsContext.prototype.customUnitDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CustomUnitDeclarationContext);
    } else {
        return this.getTypedRuleContext(CustomUnitDeclarationContext,i);
    }
};

CustomUnitDeclarationsContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterCustomUnitDeclarations(this);
	}
};

CustomUnitDeclarationsContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitCustomUnitDeclarations(this);
	}
};

CustomUnitDeclarationsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitCustomUnitDeclarations(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.CustomUnitDeclarationsContext = CustomUnitDeclarationsContext;

VyperParser.prototype.customUnitDeclarations = function() {

    var localctx = new CustomUnitDeclarationsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, VyperParser.RULE_customUnitDeclarations);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(VyperParser.T__0);
        this.state = 79;
        this.match(VyperParser.T__1);
        this.state = 80;
        this.match(VyperParser.T__2);
        this.state = 81;
        this.customUnitDeclaration();
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===VyperParser.T__3) {
            this.state = 82;
            this.match(VyperParser.T__3);
            this.state = 83;
            this.customUnitDeclaration();
            this.state = 88;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 89;
        this.match(VyperParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CustomUnitDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_customUnitDeclaration;
    return this;
}

CustomUnitDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CustomUnitDeclarationContext.prototype.constructor = CustomUnitDeclarationContext;

CustomUnitDeclarationContext.prototype.Identifier = function() {
    return this.getToken(VyperParser.Identifier, 0);
};

CustomUnitDeclarationContext.prototype.StringLiteral = function() {
    return this.getToken(VyperParser.StringLiteral, 0);
};

CustomUnitDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterCustomUnitDeclaration(this);
	}
};

CustomUnitDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitCustomUnitDeclaration(this);
	}
};

CustomUnitDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitCustomUnitDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.CustomUnitDeclarationContext = CustomUnitDeclarationContext;

VyperParser.prototype.customUnitDeclaration = function() {

    var localctx = new CustomUnitDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, VyperParser.RULE_customUnitDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(VyperParser.Identifier);
        this.state = 92;
        this.match(VyperParser.T__1);
        this.state = 93;
        this.match(VyperParser.StringLiteral);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InterfaceDefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_interfaceDefinition;
    return this;
}

InterfaceDefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterfaceDefinitionContext.prototype.constructor = InterfaceDefinitionContext;

InterfaceDefinitionContext.prototype.Identifier = function() {
    return this.getToken(VyperParser.Identifier, 0);
};

InterfaceDefinitionContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterInterfaceDefinition(this);
	}
};

InterfaceDefinitionContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitInterfaceDefinition(this);
	}
};

InterfaceDefinitionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitInterfaceDefinition(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.InterfaceDefinitionContext = InterfaceDefinitionContext;

VyperParser.prototype.interfaceDefinition = function() {

    var localctx = new InterfaceDefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, VyperParser.RULE_interfaceDefinition);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(VyperParser.Identifier);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StateVariableDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_stateVariableDeclaration;
    return this;
}

StateVariableDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StateVariableDeclarationContext.prototype.constructor = StateVariableDeclarationContext;

StateVariableDeclarationContext.prototype.Identifier = function() {
    return this.getToken(VyperParser.Identifier, 0);
};

StateVariableDeclarationContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

StateVariableDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterStateVariableDeclaration(this);
	}
};

StateVariableDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitStateVariableDeclaration(this);
	}
};

StateVariableDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitStateVariableDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.StateVariableDeclarationContext = StateVariableDeclarationContext;

VyperParser.prototype.stateVariableDeclaration = function() {

    var localctx = new StateVariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, VyperParser.RULE_stateVariableDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 97;
        this.match(VyperParser.Identifier);
        this.state = 98;
        this.match(VyperParser.T__1);
        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===VyperParser.T__5) {
            this.state = 99;
            this.match(VyperParser.T__5);
        }

        this.state = 102;
        this.type();
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===VyperParser.T__6) {
            this.state = 103;
            this.match(VyperParser.T__6);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_type;
    return this;
}

TypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeContext.prototype.constructor = TypeContext;

TypeContext.prototype.referenceType = function() {
    return this.getTypedRuleContext(ReferenceTypeContext,0);
};

TypeContext.prototype.valueType = function() {
    return this.getTypedRuleContext(ValueTypeContext,0);
};

TypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterType(this);
	}
};

TypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitType(this);
	}
};

TypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.TypeContext = TypeContext;

VyperParser.prototype.type = function() {

    var localctx = new TypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, VyperParser.RULE_type);
    try {
        this.state = 108;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 106;
            this.referenceType();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 107;
            this.valueType();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ValueTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_valueType;
    return this;
}

ValueTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ValueTypeContext.prototype.constructor = ValueTypeContext;

ValueTypeContext.prototype.unitType = function() {
    return this.getTypedRuleContext(UnitTypeContext,0);
};

ValueTypeContext.prototype.DecimalNumber = function() {
    return this.getToken(VyperParser.DecimalNumber, 0);
};

ValueTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterValueType(this);
	}
};

ValueTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitValueType(this);
	}
};

ValueTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitValueType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.ValueTypeContext = ValueTypeContext;

VyperParser.prototype.valueType = function() {

    var localctx = new ValueTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, VyperParser.RULE_valueType);
    try {
        this.state = 120;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case VyperParser.T__7:
            this.enterOuterAlt(localctx, 1);
            this.state = 110;
            this.match(VyperParser.T__7);
            break;
        case VyperParser.T__8:
            this.enterOuterAlt(localctx, 2);
            this.state = 111;
            this.match(VyperParser.T__8);
            break;
        case VyperParser.T__9:
            this.enterOuterAlt(localctx, 3);
            this.state = 112;
            this.match(VyperParser.T__9);
            break;
        case VyperParser.T__10:
            this.enterOuterAlt(localctx, 4);
            this.state = 113;
            this.match(VyperParser.T__10);
            break;
        case VyperParser.T__11:
            this.enterOuterAlt(localctx, 5);
            this.state = 114;
            this.match(VyperParser.T__11);
            break;
        case VyperParser.T__15:
        case VyperParser.T__16:
        case VyperParser.T__17:
        case VyperParser.Identifier:
            this.enterOuterAlt(localctx, 6);
            this.state = 115;
            this.unitType();
            break;
        case VyperParser.T__12:
            this.enterOuterAlt(localctx, 7);
            this.state = 116;
            this.match(VyperParser.T__12);
            break;
        case VyperParser.T__13:
            this.enterOuterAlt(localctx, 8);
            this.state = 117;
            this.match(VyperParser.T__13);
            this.state = 118;
            this.match(VyperParser.DecimalNumber);
            this.state = 119;
            this.match(VyperParser.T__14);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function UnitTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_unitType;
    return this;
}

UnitTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UnitTypeContext.prototype.constructor = UnitTypeContext;

UnitTypeContext.prototype.customUnitType = function() {
    return this.getTypedRuleContext(CustomUnitTypeContext,0);
};

UnitTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterUnitType(this);
	}
};

UnitTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitUnitType(this);
	}
};

UnitTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitUnitType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.UnitTypeContext = UnitTypeContext;

VyperParser.prototype.unitType = function() {

    var localctx = new UnitTypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, VyperParser.RULE_unitType);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 126;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case VyperParser.T__15:
            this.state = 122;
            this.match(VyperParser.T__15);
            break;
        case VyperParser.T__16:
            this.state = 123;
            this.match(VyperParser.T__16);
            break;
        case VyperParser.T__17:
            this.state = 124;
            this.match(VyperParser.T__17);
            break;
        case VyperParser.Identifier:
            this.state = 125;
            this.customUnitType();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CustomUnitTypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = VyperParser.RULE_customUnitType;
    return this;
}

CustomUnitTypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CustomUnitTypeContext.prototype.constructor = CustomUnitTypeContext;

CustomUnitTypeContext.prototype.Identifier = function() {
    return this.getToken(VyperParser.Identifier, 0);
};

CustomUnitTypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.enterCustomUnitType(this);
	}
};

CustomUnitTypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof VyperListener ) {
        listener.exitCustomUnitType(this);
	}
};

CustomUnitTypeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof VyperVisitor ) {
        return visitor.visitCustomUnitType(this);
    } else {
        return visitor.visitChildren(this);
    }
};




VyperParser.CustomUnitTypeContext = CustomUnitTypeContext;

VyperParser.prototype.customUnitType = function() {
